# Performance.rs

./: .gitignore  README_benchmark_runner.md
configs/: internvl3-scenario-1.yaml  internvl3-scenario-2.yaml  internvl3-scenario-3.yaml  internvl3-scenario-4.yaml  qwen3-235b-scenario-1.yaml  qwen3-235b-scenario-2.yaml  qwen3-235b-scenario-3.yaml  qwen3-235b-scenario-4.yaml  qwen3-30b-scenario-1.yaml  qwen3-30b-scenario-2.yaml  qwen3-30b-scenario-3.yaml  qwen3-30b-scenario-4.yaml  xlam-scenario-1.yaml  xlam-scenario-2.yaml  xlam-scenario-3.yaml  xlam-scenario-4.yaml
performance/: Cargo.toml  README.md
performance/src/: benchmark.rs  config.rs  http_client.rs  main.rs  output.rs  prompt_generator.rs
