[package]
name = "performance"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
csv = "1.3"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
anyhow = "1.0"
serde_json = "1.0"
tokenizers = "0.21.2"
